@@ -1,3 +1,8 @@
+Fri Jan 16 17:20:33 2015  Koichi Sasada  <ko1@atdot.net>
+
+	vm.c, vm_core.h: constify VM_CF_LEP, VM_CF_PREV_EP, VM_CF_BLOCK_PTR
+	and rb_vm_control_frame_block_ptr.
+
 Fri Jan 16 15:41:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych.rb: bump version
